fix(openvk_modern): sidebar appears on scroll fix

--- a/themepacks/openvk_modern/stylesheet.css
+++ b/themepacks/openvk_modern/stylesheet.css
@@ -47,11 +47,13 @@ body {
     box-shadow: unset;
 }
 
-.sidebar {
+.navigation {
     margin-top: 47px;
-    position: fixed;
     background-color: #fff;
-    z-index: 199;
+    z-index: 198;
+}
+.navigation.navigation-fixed {
+    margin-top: 42px;
 }
 
 .page_body {
